#28 Ajouter l'image du menu sur la page de présentation du menu

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
         "phpunit/phpunit": "^9.6"
     },
   "require": {
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-dom": "*",
+    "ext-libxml": "*"
   }
 }
