--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,20 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^9.6"
-    },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "files": [
+    "config/constants.php"
+  ],
+  "require-dev": {
+    "phpunit/phpunit": "^9.6"
+  },
   "require": {
     "ext-pdo": "*",
     "ext-dom": "*",
-    "ext-libxml": "*"
+    "ext-libxml": "*",
+    "ext-ctype": "*",
+    "vlucas/phpdotenv": "^5.6"
   }
 }
