--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "ext-dom": "*",
     "ext-libxml": "*",
     "ext-ctype": "*",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "ext-curl": "*"
   }
 }
