--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+.deploy-trigger.txt
 # N’importe quel fichier portant le nom `.env`, y compris dans les sous-répertoires
 .env
-/cache/*
-/vendor/*
+production
 /assets/IMG/*
+/cache/*
 /logs/*
+/vendor/*
