--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "ext-libxml": "*",
     "ext-ctype": "*",
     "vlucas/phpdotenv": "^5.6",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "infobip/infobip-api-php-client": "6.2.1"
   }
 }
