--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "ext-ctype": "*",
     "vlucas/phpdotenv": "^5.6",
     "ext-curl": "*",
-    "infobip/infobip-api-php-client": "6.2.1"
+    "infobip/infobip-api-php-client": "6.2.1",
+    "pusher/pusher-php-server": "^7.2"
   }
 }
